2017-01-07	"No, I'm a frayed knot."  (4)

		include/innocent-pear/dawg.h :
		- dawg_impl_2<...>::operator>>(.): added back (some)
		  randomization of character order, plus a bit more

		test/test-dawg-syn.cc ,
		test/test-dawg-syn.good :
		- added subtests for dawg<...>::operator>>(.)

		GNUmakefile :
		- now dumps smaller portions of compiled test binaries, again

2017-01-06	"No, I'm a frayed knot."  (3)

		share/innocent-pear/doge-01.cc :
		- reduced the scrambling around the getpagesize() and
		  mprotect(...) calls

		include/innocent-pear/dawg.h :
		- dawg_impl_2<...>::operator>>(.): removed randomization of
		  character order (for now)

2017-01-04	More syntactic sugar for strings.

		share/innocent-pear/omnomnom.lxx :
		- added $$"..." and $$L"..."

		test/test-dawg-syn.cc ,
		test/test-doge-with-dawg.cc ,
		test/test-yodawg-syn.cc :
		- added testing of $$"..." and $$L"..."

		include/innocent-pear/omg.h :
		- now only uses FS_IOC_GETFLAGS and FS_IOC_GETVERSION ioctls
		  if allow_resource_unsafes is on

		README.md :
		- added brief note on syntactic sugar for strings
		- _Description_ now comes before _Synopsis_

2017-01-02	Be even less verbose.

		bin/innocent-pear-dogecoin.cc :
		- now cuts off long lists of section names in its stderr
		  output

2016-12-31	Looks stable and somewhat symmetrical.

		include/innocent-pear/dawg.h :
		- factored dawg_impl<...> into two classes, dawg_impl_1<...>
		  and dawg_impl_2<...>
		- dawg_impl_2<...>::operator>>(.) now writes characters in
		  random order

		include/innocent-pear/omg.h :
		- now uses dawg_impl_2<...> instead of dawg_impl<...>
		- made buffer for "/dev/tty" oversized

		include/innocent-pear/yodawg.h :
		- now uses dawg_impl_2<...> instead of dawg_impl<...>

		share/innocent-pear/doge-i.h :
		- further reduced output of innocent_pear_CHAFF(.)

2016-12-30	"No, I'm a frayed knot."  (2)

		include/innocent-pear/orly.h ,
		include/innocent-pear/yarly.h :
		- yarly<...>::wut(...) ~> orly<...>::wot(...)