@@ -1,3 +1,9 @@
+2017-01-08	"No, I'm a frayed knot."  (5)
+
+		include/innocent-pear/omg.h :
+		- on x86-32 and x86-64, improved the generation of `verr' and
+		  `verw' to suppress (e.g.) `movzwl' casts which come after
+
 2017-01-07	"No, I'm a frayed knot."  (4)
 
 		include/innocent-pear/dawg.h :
